<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnxietyForm"
    android:orientation="vertical"
    android:padding="8dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout1"

        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1.5"
            android:background="@drawable/shape"
            android:hint="Name"
            android:paddingLeft="10dp"

            android:inputType="text"
            android:textSize="16sp"
            android:textColorHint="#B6B3B3"

            android:layout_marginRight="5dp"/>

        <EditText
            android:id="@+id/dob"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1.5"
            android:inputType="date"
            android:background="@drawable/shape"
            android:hint="DOB"
            android:paddingLeft="10dp"

            android:textColorHint="#B6B3B3"
            android:layout_marginRight="5dp"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/layout1"
        android:layout_marginTop="20dp"
        >
        <EditText
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1.5"
            android:inputType="text"
            android:background="@drawable/shape"
            android:layout_marginRight="5dp"
            android:hint="Address"
            android:paddingLeft="10dp"

            android:textColorHint="#B6B3B3"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1.5"
            android:inputType="date"
            android:hint="Date"
            android:paddingLeft="10dp"

            android:textColorHint="#B6B3B3"
            android:background="@drawable/shape"
            android:layout_marginRight="5dp"
            android:textSize="16sp" />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_below="@+id/layout1"
    android:layout_marginTop="20dp"
    >

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_name"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/text1"
        android:textColor="#968B8B"
        android:textSize="16sp" />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text1"
        android:layout_marginTop="20dp"
        android:background="#968B8B" />
    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:textSize="16sp"
        android:textColor="#968B8B"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:drawableLeft="@drawable/ic_action_name"
        />
    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text2"
        android:layout_marginTop="20dp"
        android:background="#968B8B" />
    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text3"
        android:textSize="16sp"
        android:textColor="#968B8B"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:drawableLeft="@drawable/ic_action_name"
        />
    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text3"
        android:layout_marginTop="20dp"
        android:background="#968B8B" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_name"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/text4"
        android:textColor="#968B8B"
        android:textSize="16sp" />

    <View
        android:id="@+id/view4"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text4"
        android:layout_marginTop="20dp"
        android:background="#968B8B" />
    <TextView
        android:id="@+id/text5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text5"
        android:textSize="16sp"
        android:textColor="#968B8B"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:drawableLeft="@drawable/ic_action_name"
        />
    <View
        android:id="@+id/view5"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text5"
        android:layout_marginTop="20dp"
        android:background="#968B8B" />
    <TextView
        android:id="@+id/text6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/text6"
        android:textColor="#968B8B"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:drawableLeft="@drawable/ic_action_name"
        />


    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:background="#F50000"
        android:textSize="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        />
</LinearLayout>

</LinearLayout>